--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -33,7 +33,7 @@ jobs:
       with:
         tf_actions_version: 1.44.0
         tf_actions_subcommand: 'init'
-        tf_actions_working_dir: "kforce"
+        tf_actions_working_dir: "./terraform"
    
     - name: 'Terraform Plan'
       uses: hashicorp/terraform-github-actions@master
